# QtTutorial

./: CMakeLists.txt  README.md
cmake/: imgRes.rc.cmake
data/: icon_r.qrc
src/: CMakeLists.txt  main.cpp
src/core/: feature.cpp  feature.h  imgConfig.cpp  imgConfig.h  imgFileMgr.cpp  imgFileMgr.h  imgFrame.cpp  imgFrame.h  imgMgr.cpp  imgMgr.h  imgResApp.cpp  imgResApp.h  imgScene.cpp  imgScene.h  imgType.h  imgViewPort.cpp  imgViewPort.h  labelItem.cpp  labelItem.h  match.cpp  matchThread.cpp  matchThread.h  progressIndicator.cpp  progressIndicator.h  selRect.cpp  selRect.h  sortfilterproxymodel.cpp  sortfilterproxymodel.h  treeView.cpp  treeView.h  treeitem.cpp  treeitem.h  treemView.cpp  treemodel.cpp  treemodel.cpp.bak  treemodel.h  treemodel.h.bak  viewPort.cpp  viewPort.h
src/gui/: autoGenDialog.cpp  autoGenDialog.h  autoGenTileDialog.cpp  autoGenTileDialog.h  autoGenTilesDialog.ui  mainWindow.cpp  mainWindow.h  mainWindow.ui  scrollDialog.cpp  scrollDialog.h  scrollDialog.ui  settingDialog.cpp  settingDialog.h  settingDialog.ui  test.ui  tileListDialog.ui  tileSelDialog.cpp  tileSelDialog.h  tileSelDialog.ui  tilesListDialog.cpp  tilesListDialog.h  tilesShowDialog.h  zoomDialog.cpp  zoomDialog.h  zoomDialog.ui
